<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:card_view="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
		android:minWidth="@dimen/dialog_minWidth"
		android:orientation="vertical">

	<android.support.v7.widget.CardView
			android:layout_gravity="center"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minWidth="@dimen/dialog_minWidth"
			android:layout_marginBottom="@dimen/margin_narrow"
			android:layout_marginHorizontal="@dimen/fab_margin"
			android:layout_marginTop="@dimen/fab_margin"
			card_view:cardCornerRadius="@dimen/margin_narrow"
			card_view:cardBackgroundColor="@color/colorGrey">

		<android.support.constraint.ConstraintLayout
				xmlns:app="http://schemas.android.com/apk/res-auto"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/fab_margin">

			<AutoCompleteTextView
					android:id="@+id/host"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/margin_narrow"
					android:layout_marginEnd="@dimen/fab_margin"
					android:layout_marginStart="@dimen/fab_margin"
					android:layout_marginTop="@dimen/fab_margin"
					android:hint="@string/hint_host"
					android:textSize="@dimen/text_normal"
					android:maxLength="150"
					android:selectAllOnFocus="true"
					android:completionThreshold="0"
					android:inputType="textUri"
					android:imeOptions="actionNext|flagNoExtractUi"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"/>

			<ImageButton
					android:id="@+id/lookup"
					android:layout_width="@dimen/text_title"
					android:layout_height="@dimen/text_title"
					android:layout_marginEnd="@dimen/margin_narrow"
					android:contentDescription="@string/content_look"
					android:background="?android:attr/selectableItemBackground"
					app:layout_constraintBottom_toBottomOf="@+id/host"
					app:layout_constraintEnd_toEndOf="@+id/host"
					app:layout_constraintTop_toTopOf="@+id/host"
					android:src="@drawable/icon_lookup"/>

			<ImageButton
					android:id="@+id/host_clear"
					android:layout_width="@dimen/text_title"
					android:layout_height="@dimen/text_title"
					android:layout_marginEnd="@dimen/margin_narrow"
					android:contentDescription="@string/content_clear"
					android:background="?android:attr/selectableItemBackground"
					app:layout_constraintBottom_toBottomOf="@+id/host"
					app:layout_constraintEnd_toStartOf="@+id/lookup"
					app:layout_constraintTop_toTopOf="@+id/host"
					android:src="@drawable/icon_clear"/>

			<EditText
					android:id="@+id/address"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/margin_narrow"
					android:layout_marginEnd="@dimen/fab_margin"
					android:layout_marginStart="@dimen/fab_margin"
					android:layout_marginTop="@dimen/fab_margin"
					android:hint="@string/hint_address"
					android:textSize="@dimen/text_normal"
					android:maxLength="50"
					android:selectAllOnFocus="true"
					android:completionThreshold="0"
					android:digits="0123456789."
					android:inputType="numberDecimal"
					android:imeOptions="actionNext|flagNoExtractUi"
					android:importantForAutofill="no"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/host"/>

			<ImageButton
					android:id="@+id/address_clear"
					android:layout_width="@dimen/text_title"
					android:layout_height="@dimen/text_title"
					android:layout_marginEnd="@dimen/margin_narrow"
					android:contentDescription="@string/content_clear"
					android:background="?android:attr/selectableItemBackground"
					app:layout_constraintBottom_toBottomOf="@+id/address"
					app:layout_constraintEnd_toEndOf="@+id/address"
					app:layout_constraintTop_toTopOf="@+id/address"
					android:src="@drawable/icon_clear"/>

			<EditText
					android:id="@+id/login"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/margin_narrow"
					android:layout_marginEnd="@dimen/fab_margin"
					android:layout_marginStart="@dimen/fab_margin"
					android:layout_marginTop="@dimen/fab_margin"
					android:hint="@string/hint_login"
					android:textSize="@dimen/text_normal"
					android:maxLength="50"
					android:selectAllOnFocus="true"
					android:completionThreshold="0"
					android:inputType="textEmailAddress"
					android:imeOptions="actionNext|flagNoExtractUi"
					android:importantForAutofill="no"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/address"/>

			<ImageButton
					android:id="@+id/login_clear"
					android:layout_width="@dimen/text_title"
					android:layout_height="@dimen/text_title"
					android:layout_marginEnd="@dimen/margin_narrow"
					android:contentDescription="@string/content_clear"
					android:background="?android:attr/selectableItemBackground"
					app:layout_constraintBottom_toBottomOf="@+id/login"
					app:layout_constraintEnd_toEndOf="@+id/login"
					app:layout_constraintTop_toTopOf="@+id/login"
					android:src="@drawable/icon_clear"/>

			<EditText
					android:id="@+id/password"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/margin_narrow"
					android:layout_marginEnd="@dimen/fab_margin"
					android:layout_marginStart="@dimen/fab_margin"
					android:layout_marginTop="@dimen/fab_margin"
					android:hint="@string/hint_password"
					android:textSize="@dimen/text_normal"
					android:maxLength="50"
					android:selectAllOnFocus="true"
					android:completionThreshold="0"
					android:inputType="textPassword"
					android:imeOptions="actionDone|flagNoExtractUi"
					android:importantForAutofill="no"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/login"/>

			<ImageButton
					android:id="@+id/password_clear"
					android:layout_width="@dimen/text_title"
					android:layout_height="@dimen/text_title"
					android:layout_marginEnd="@dimen/margin_narrow"
					android:contentDescription="@string/content_clear"
					android:background="?android:attr/selectableItemBackground"
					app:layout_constraintBottom_toBottomOf="@+id/password"
					app:layout_constraintEnd_toEndOf="@+id/password"
					app:layout_constraintTop_toTopOf="@+id/password"
					android:src="@drawable/icon_clear"/>

			<Button
					android:id="@+id/save"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/fab_margin"
					android:padding="@dimen/margin_normal"
					android:contentDescription="@string/content_save"
					android:background="?android:attr/selectableItemBackground"
					android:text="@string/label_save"
					android:drawableStart="@drawable/icon_save"
					android:enabled="false"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/password"/>
		</android.support.constraint.ConstraintLayout>
	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
			android:layout_gravity="center"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minWidth="@dimen/dialog_minWidth"
			android:layout_marginBottom="@dimen/fab_margin"
			android:layout_marginHorizontal="@dimen/fab_margin"
			android:layout_marginTop="@dimen/margin_narrow"
			card_view:cardCornerRadius="@dimen/margin_narrow"
			card_view:cardBackgroundColor="@color/colorGrey">
		<CheckBox
				android:id="@+id/quick_start"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/fab_margin"
				android:layout_marginEnd="@dimen/fab_margin"
				android:layout_marginStart="@dimen/fab_margin"
				android:layout_marginTop="@dimen/fab_margin"
				android:text="@string/label_quick"
				android:textSize="@dimen/text_medium"
				android:layoutDirection="rtl"/>
	</android.support.v7.widget.CardView>
</LinearLayout>