<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="@dimen/fab_margin"
		android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		tools:showIn="@layout/app_main"
		tools:context=".MainActivity">

	<Spinner
			android:id="@+id/host"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/margin_narrow"
			android:layout_marginStart="@dimen/fab_margin"
			android:layout_marginVertical="0dp"
			android:hint="@string/hint_host"
			android:textSize="@dimen/text_medium"
			app:layout_constraintEnd_toStartOf="@+id/address"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

	<TextView
			android:id="@+id/address"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/fab_margin"
			android:layout_marginStart="@dimen/margin_narrow"
			android:hint="@string/hint_address"
			android:textSize="@dimen/text_small"
			android:gravity="end"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

	<EditText
			android:id="@+id/command"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin_narrow"
			android:layout_marginEnd="@dimen/fab_margin"
			android:layout_marginStart="@dimen/fab_margin"
			android:layout_marginTop="@dimen/margin_narrow"
			android:hint="@string/hint_command"
			android:typeface="monospace"
			android:textSize="@dimen/text_medium"
			android:maxLength="150"
			android:selectAllOnFocus="true"
			android:completionThreshold="0"
			android:inputType="textUri|textNoSuggestions"
			android:imeOptions="actionDone|flagNoExtractUi"
			android:importantForAutofill="no"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/host"/>

	<ImageButton
			android:id="@+id/command_clear"
			android:layout_width="@dimen/text_title"
			android:layout_height="@dimen/text_title"
			android:layout_marginEnd="@dimen/margin_narrow"
			android:contentDescription="@string/content_clear"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintBottom_toBottomOf="@+id/command"
			app:layout_constraintEnd_toEndOf="@+id/command"
			app:layout_constraintTop_toTopOf="@+id/command"
			android:src="@drawable/icon_clear"/>

	<ImageButton
			android:id="@+id/action_up"
			android:layout_width="@dimen/button_size"
			android:layout_height="@dimen/button_size"
			android:layout_marginHorizontal="@dimen/fab_margin"
			android:contentDescription="@string/content_nav"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintStart_toEndOf="@+id/action_left"
			app:layout_constraintTop_toBottomOf="@+id/command"
			android:src="@drawable/icon_up"
			android:scaleType="fitCenter"/>

	<ImageButton
			android:id="@+id/action_left"
			android:layout_width="@dimen/button_size"
			android:layout_height="@dimen/button_size"
			android:layout_marginHorizontal="@dimen/fab_margin"
			android:layout_marginTop="@dimen/fab_margin"
			android:contentDescription="@string/content_nav"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/action_up"
			android:src="@drawable/icon_left"
			android:scaleType="fitCenter"/>

	<ImageButton
			android:id="@+id/action_enter"
			android:layout_width="@dimen/button_size"
			android:layout_height="@dimen/button_size"
			android:layout_marginHorizontal="@dimen/fab_margin"
			android:contentDescription="@string/content_nav"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintStart_toEndOf="@+id/action_left"
			app:layout_constraintTop_toTopOf="@+id/action_left"
			android:src="@drawable/icon_enter"
			android:scaleType="fitCenter"/>

	<ImageButton
			android:id="@+id/action_down"
			android:layout_width="@dimen/button_size"
			android:layout_height="@dimen/button_size"
			android:layout_marginHorizontal="@dimen/fab_margin"
			android:layout_marginTop="@dimen/fab_margin"
			android:contentDescription="@string/content_nav"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintEnd_toEndOf="@+id/action_enter"
			app:layout_constraintStart_toStartOf="@+id/action_enter"
			app:layout_constraintTop_toBottomOf="@+id/action_enter"
			android:src="@drawable/icon_down"
			android:scaleType="fitCenter"/>

	<ImageButton
			android:id="@+id/action_right"
			android:layout_width="@dimen/button_size"
			android:layout_height="@dimen/button_size"
			android:layout_marginHorizontal="@dimen/fab_margin"
			android:contentDescription="@string/content_nav"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintBottom_toBottomOf="@+id/action_enter"
			app:layout_constraintStart_toEndOf="@+id/action_enter"
			app:layout_constraintTop_toTopOf="@+id/action_enter"
			android:src="@drawable/icon_right"
			android:scaleType="fitCenter"/>

	<ImageButton
			android:id="@+id/action_settings"
			android:layout_width="@dimen/button_size"
			android:layout_height="@dimen/button_size"
			android:contentDescription="@string/content_nav"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintBottom_toTopOf="@+id/action_enter"
			app:layout_constraintEnd_toStartOf="@+id/action_enter"
			android:padding="@dimen/img_padding"
			android:src="@drawable/icon_settings"
			android:scaleType="fitCenter"/>

	<ImageButton
			android:id="@+id/action_undo"
			android:layout_width="@dimen/button_size"
			android:layout_height="@dimen/button_size"
			android:contentDescription="@string/content_nav"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintEnd_toStartOf="@+id/action_enter"
			app:layout_constraintTop_toBottomOf="@+id/action_enter"
			android:padding="@dimen/img_padding"
			android:src="@drawable/icon_undo"
			android:scaleType="fitCenter"/>

	<ImageButton
			android:id="@+id/action_refresh"
			android:layout_width="@dimen/button_size"
			android:layout_height="@dimen/button_size"
			android:contentDescription="@string/content_nav"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintBottom_toTopOf="@+id/action_enter"
			app:layout_constraintStart_toEndOf="@+id/action_enter"
			android:padding="@dimen/img_padding"
			android:src="@drawable/icon_refresh"
			android:scaleType="fitCenter"/>

	<ImageButton
			android:id="@+id/action_list"
			android:layout_width="@dimen/button_size"
			android:layout_height="@dimen/button_size"
			android:contentDescription="@string/content_nav"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintStart_toEndOf="@+id/action_enter"
			app:layout_constraintTop_toBottomOf="@+id/action_enter"
			android:padding="@dimen/img_padding"
			android:src="@drawable/icon_list"
			android:scaleType="fitCenter"/>

	<TextView
			android:id="@+id/self"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/fab_margin"
			android:layout_marginStart="@dimen/margin_narrow"
			android:hint="@string/hint_address"
			android:textSize="@dimen/text_small"
			android:gravity="end"
			android:background="@android:color/darker_gray"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/action_right"
			app:layout_constraintTop_toBottomOf="@+id/command"/>

	<TextView
			android:id="@+id/path"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginEnd="@dimen/fab_margin"
			android:layout_marginStart="@dimen/margin_narrow"
			android:layout_marginVertical="@dimen/margin_normal"
			android:paddingEnd="@dimen/margin_narrow"
			android:paddingStart="0dp"
			android:hint="@string/hint_path"
			android:textSize="@dimen/text_medium"
			android:gravity="end"
			android:background="@android:color/darker_gray"
			app:layout_constraintBottom_toTopOf="@id/hardware"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/action_right"
			app:layout_constraintTop_toBottomOf="@+id/self"/>

	<TextView
			android:id="@+id/hardware"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginBottom="@dimen/margin_normal"
			android:layout_marginEnd="@dimen/fab_margin"
			android:layout_marginStart="@dimen/margin_narrow"
			android:paddingBottom="@dimen/margin_narrow"
			android:paddingEnd="@dimen/margin_narrow"
			android:paddingStart="0dp"
			android:hint="@string/hint_hardware"
			android:textSize="@dimen/text_medium"
			android:gravity="end|bottom"
			android:background="@android:color/darker_gray"
			app:layout_constraintBottom_toTopOf="@+id/response"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/action_right"
			app:layout_constraintTop_toBottomOf="@id/action_enter"/>

	<TextView
			android:id="@+id/response"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginBottom="@dimen/margin_normal"
			android:layout_marginHorizontal="@dimen/fab_margin"
			android:layout_marginTop="@dimen/margin_narrow"
			android:paddingEnd="0dp"
			android:paddingStart="@dimen/margin_narrow"
			android:textSize="@dimen/text_medium"
			android:background="@android:color/darker_gray"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/action_down"/>
</android.support.constraint.ConstraintLayout>